--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "name" : "fy_uniapp_user",
-    "appid" : "",
+    "appid" : "__UNI__96169FA",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
     "app-plus" : {
         /* 5+App特有相关 */
-		"usingComponents":true,
+        "usingComponents" : true,
         "splashscreen" : {
             "alwaysShowBeforeRender" : true,
             "waiting" : true,
@@ -55,10 +55,23 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-		"usingComponents":true,
+        "usingComponents" : true,
         "appid" : "",
         "setting" : {
             "urlCheck" : true
         }
+    },
+    "h5" : {
+        "template" : "",
+        "router" : {
+            "mode" : "history",
+            "base" : "/h5/"
+        },
+        "devServer" : {
+            "https" : false,
+            "port" : 4444
+        },
+        "title" : "mall",
+        "domain" : "mall"
     }
 }
